--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -99,15 +99,16 @@
             
 
             <div class="comments-area">
-              <h4>03 Comments</h4>
+              <h4>{{post.comments|length}} Comments</h4>
+              {% for comment in post.comments %}
               <div class="comment-list">
                 <div class="single-comment justify-content-between d-flex">
                   <div class="user justify-content-between d-flex">
                     <div class="desc">
-                      <h5><a href="#">Emilly Blunt</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
+                      <h5><a href="#">{{comment.author}}</a></h5>
+                      <p class="date">{{comment.published_at}} </p>
                       <p class="comment">
-                          Never say goodbye till the end comes!
+                        {{comment.text}}
                       </p>
                     </div>
                   </div>
@@ -115,7 +116,8 @@
                           <a href="" class="btn-reply text-uppercase">reply</a> 
                   </div>
                 </div>
-              </div>	
+              </div>
+              {% endfor %}	
               <div class="comment-list">
                 <div class="single-comment justify-content-between d-flex">
                   <div class="user justify-content-between d-flex">
