--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head></head>
-<body>
-    <h1>Тут будут контакты</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %} Sensive Blog - Contacts {% endblock %}
+{% block content %} 
+    <!--================ Hero sm Banner start =================-->      
+    <section class="mb-30px">
+    <div class="container">
+        <div class="hero-banner hero-banner--sm">
+        <div class="hero-banner__content">
+            <h1>Contact Us</h1>
+            <nav aria-label="breadcrumb" class="banner-breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+            </ol>
+            </nav>
+        </div>
+        </div>
+    </div>
+    </section>
+    <!--================ Hero sm Banner end =================-->    
+    <div class="container">
+        {{html_map|safe}}
+    </div>
+
+{% endblock %}
