--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Sensive Blog - Contacts {% endblock %}
+{% block title %}
+    Sensive Blog - Contacts
+{% endblock %}
 {% block content %} 
     <!--================ Hero sm Banner start =================-->      
     <section class="mb-30px">
